# misc_files

./: Data driven proposals to increase top line revenue.pptx  ProjectEuler.ipynb  Queries and additional code.md  hackathon.ipynb  world-happiness-report-2022.ipynb
L7 - M4 - A1 Data/: kickstarter_df_eval_processed.csv
L7_M4_A3/: heating_analysis_regression.ipynb  pyproject.toml
Stuff/: BT-mic-filter.gra  dynamic-mic-filter.gra
