[project]
name = "template"
version = "0.1.0"
description = ""
authors = [
    {name = "blank", email = "blank@blank.com"},
]
dependencies = [
    "pip>=23.3.1",
    "setuptools>=68.2.2",
    "matplotlib>=3.8.2",
    "plotly>=5.18.0",
    "nbformat>=5.9.2",
    "scikit-learn>=1.3.2",
    "ipywidgets>=8.1.1",
    "pyarrow>=15.0.2",
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = ""}

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]